--- a/dubbo/服务注册与发现.md
+++ b/dubbo/服务注册与发现.md
@@ -1,2 +1,81 @@
 ## 服务注册与发现
 
+分析dubbo服务注册、服务暴露、服务发现、服务调用的过程。
+
+xml文件配置，使用spring提供的解析扩展标签机制。
+
+DubboNamespaceHandler.java
+
+spring解析扩展标签，需要实现一个NamespaceHandler，指明各个标签的解析器。
+
+```java
+public class DubboNamespaceHandler extends NamespaceHandlerSupport implements ConfigurableSourceBeanMetadataElement {
+
+    static {
+        Version.checkDuplicate(DubboNamespaceHandler.class);
+    }
+
+    @Override
+    public void init() {
+        registerBeanDefinitionParser("application", new DubboBeanDefinitionParser(ApplicationConfig.class, true));
+        registerBeanDefinitionParser("module", new DubboBeanDefinitionParser(ModuleConfig.class, true));
+        registerBeanDefinitionParser("registry", new DubboBeanDefinitionParser(RegistryConfig.class, true));
+        registerBeanDefinitionParser("config-center", new DubboBeanDefinitionParser(ConfigCenterBean.class, true));
+        registerBeanDefinitionParser("metadata-report", new DubboBeanDefinitionParser(MetadataReportConfig.class, true));
+        registerBeanDefinitionParser("monitor", new DubboBeanDefinitionParser(MonitorConfig.class, true));
+        registerBeanDefinitionParser("metrics", new DubboBeanDefinitionParser(MetricsConfig.class, true));
+        registerBeanDefinitionParser("ssl", new DubboBeanDefinitionParser(SslConfig.class, true));
+        registerBeanDefinitionParser("provider", new DubboBeanDefinitionParser(ProviderConfig.class, true));
+        registerBeanDefinitionParser("consumer", new DubboBeanDefinitionParser(ConsumerConfig.class, true));
+        registerBeanDefinitionParser("protocol", new DubboBeanDefinitionParser(ProtocolConfig.class, true));
+        registerBeanDefinitionParser("service", new DubboBeanDefinitionParser(ServiceBean.class, true));
+        registerBeanDefinitionParser("reference", new DubboBeanDefinitionParser(ReferenceBean.class, false));
+        registerBeanDefinitionParser("annotation", new AnnotationBeanDefinitionParser());
+    }
+
+    /**
+     * Override {@link NamespaceHandlerSupport#parse(Element, ParserContext)} method
+     *
+     * @param element       {@link Element}
+     * @param parserContext {@link ParserContext}
+     * @return
+     * @since 2.7.5
+     */
+    @Override
+    public BeanDefinition parse(Element element, ParserContext parserContext) {
+        BeanDefinitionRegistry registry = parserContext.getRegistry();
+        registerAnnotationConfigProcessors(registry);
+        registerApplicationListeners(registry);
+        BeanDefinition beanDefinition = super.parse(element, parserContext);
+        setSource(beanDefinition);
+        return beanDefinition;
+    }
+
+    /**
+     * Register {@link ApplicationListener ApplicationListeners} as a Spring Bean
+     *
+     * @param registry {@link BeanDefinitionRegistry}
+     * @see ApplicationListener
+     * @see AnnotatedBeanDefinitionRegistryUtils#registerBeans(BeanDefinitionRegistry, Class[])
+     * @since 2.7.5
+     */
+    private void registerApplicationListeners(BeanDefinitionRegistry registry) {
+        registerBeans(registry, DubboLifecycleComponentApplicationListener.class);
+        registerBeans(registry, DubboBootstrapApplicationListener.class);
+    }
+
+    /**
+     * Register the processors for the Spring Annotation-Driven features
+     *
+     * @param registry {@link BeanDefinitionRegistry}
+     * @see AnnotationConfigUtils
+     * @since 2.7.5
+     */
+    private void registerAnnotationConfigProcessors(BeanDefinitionRegistry registry) {
+        AnnotationConfigUtils.registerAnnotationConfigProcessors(registry);
+    }
+}
+```
+
+
+
